[package]
name = "cervine"
version = "0.0.2"
authors = ["Tamme Schichler <tamme@schichler.dev>"]
edition = "2018"
description = "A slightly more flexible Cow; to AsRef as std::borrow::Cow is to Borrow"
license = "MPL-2.0"
repository = "https://github.com/Tamschi/cervine"
publish = false
include = [
	"**/*.rs",
	"Cargo.toml",
]

[dependencies]
serde = { version = "1.0.115", optional = true }
