[package]
name = "cervine"
version = "0.0.6"
authors = ["Tamme Schichler <tamme@schichler.dev>"]
edition = "2018"
description = "A slightly more flexible Cow; roughly to T: Borrow<R> as alloc::borrow::Cow is to B: ToOwned"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Tamschi/cervine"
homepage = "https://github.com/Tamschi/cervine/tree/v0.0.6"
documentation = "https://docs.rs/cervine/0.0.6"
keywords = ["no_std", "Borrow", "Cow", "Serde"]
categories = ["data-structures"]
readme = "README.md"
include = [
	"**/*.rs",
	"!tests/unincluded_*.rs", # Tests of meta data files not included in the package.
	"Cargo.toml",
	"CHANGELOG.md",
	"CODE_OF_CONDUCT.md",
	"LICENSE-*",
	"README.md",
]
publish = false

[badges]
is-it-maintained-issue-resolution = { repository = "Tamschi/cervine" }
is-it-maintained-open-issues = { repository = "Tamschi/cervine" }
maintenance = { status = "experimental" }

[dependencies]
serde = { version = "1.0.115", optional = true, default-features = false }

[dev-dependencies]
cargo-husky = "1.5.0"
doc-comment = "0.3.3"
git_info = "0.1.2"
rand = "0.8.0"
smartstring = "1.0.0"
version-sync = "0.9.1"
